# Mask

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  checkfile.txt  detector.yaml  detector_input.txt  input.txt  input.txt.orig  kinematics.yaml  kinematics_input.txt  makefile  premake5.lua  tp
etc/: 12C3Hed_pdecay_L2_fit.txt  12C3Hed_pdecay_L2_theory.txt  AnasenDeadChannels.txt  DeadChannels.txt  convertedAnasenCoords.txt  isotropic_dist.txt  sabreDeadChannels_May2022.txt
include/: AnasenDeadChannelMap.h  AnasenEfficiency.h  AngularDistribution.h  DeadChannelMap.h  DecaySystem.h  DetectorEfficiency.h  Eloss_Tables.h  EnergyLoss.h  G3Vec.h  G4Vec.h  GRotation.h  Kinematics.h  KinematicsExceptions.h  LayeredTarget.h  LegendrePoly.h  LinkDef_Kinematics.h  MaskApp.h  MaskFile.h  MassLookup.h  Nucleus.h  OneStepSystem.h  Plotter.h  QQQDetector.h  RandomGenerator.h  Reaction.h  ReactionSystem.h  RootPlotter.h  Rotation.h  RxnType.h  SabreDetector.h  SabreEfficiency.h  StripDetector.h  Target.h  ThreeStepSystem.h  TwoStepSystem.h  Vec3.h  Vec4.h
src/: AnasenEfficiency.cpp  AngularDistribution.cpp  DecaySystem.cpp  EnergyLoss.cpp  G3Vec.cpp  G4Vec.cpp  GRotation.cpp  Kinematics.cpp  LayeredTarget.cpp  LegendrePoly.cpp  MaskApp.cpp  MaskFile.cpp  MassLookup.cpp  Nucleus.cpp  OneStepSystem.cpp  Plotter.cpp  QQQDetector.cpp  RandomGenerator.cpp  Reaction.cpp  ReactionSystem.cpp  Rotation.cpp  SabreDetector.cpp  SabreEfficiency.cpp  Target.cpp  Target.cpp.orig  ThreeStepSystem.cpp  TwoStepSystem.cpp  Vec3.cpp  Vec4.cpp  kinematics_dict.cxx  main.cpp
src/Detectors/: AnasenArray.cpp  AnasenArray.h  AnasenDeadChannelMap.cpp  AnasenDeadChannelMap.h  AnasenEfficiency.cpp  AnasenEfficiency.h  CMakeLists.txt  DeadChannelMap.cpp  DetectorApp.cpp  DetectorApp.h  DetectorArray.cpp  DetectorArray.h  DetectorEfficiency.cpp  DetectorEfficiency.h  QQQDetector.cpp  QQQDetector.h  SX3Detector.cpp  SX3Detector.h  SabreArray.cpp  SabreArray.h  SabreDeadChannelMap.cpp  SabreDeadChannelMap.h  SabreDetector.cpp  SabreDetector.h  SabreEfficiency.cpp  SabreEfficiency.h  StripDetector.cpp  StripDetector.h  main.cpp
src/Kinematics/: CMakeLists.txt  main.cpp
src/Mask/: AngularDistribution.cpp  AngularDistribution.h  CMakeLists.txt  ConfigSerializer.cpp  ConfigSerializer.h  CoupledThreeStepSystem.cpp  CoupledThreeStepSystem.h  DecaySystem.cpp  DecaySystem.h  EnergyLoss.cpp  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  LayeredTarget.cpp  LayeredTarget.h  LegendrePoly.cpp  LegendrePoly.h  LinkDef_Nucleus.h  MaskApp.cpp  MaskApp.h  MassLookup.cpp  MassLookup.h  Nucleus.cpp  Nucleus.h  OneStepSystem.cpp  OneStepSystem.h  RandomGenerator.cpp  RandomGenerator.h  Reaction.cpp  Reaction.h  ReactionSystem.cpp  ReactionSystem.h  RxnType.h  Stopwatch.cpp  Stopwatch.h  Target.cpp  Target.h  ThreadPool.h  ThreeStepSystem.cpp  (+3 more)
src/MaskApp/: CMakeLists.txt  main.cpp
src/Plotters/: CMakeLists.txt  RootPlotter.cpp  RootPlotter.h  main.cpp
src/Plotters/Python/: .gitignore  MaskFile.py  NucData.py  Nucleus.py  PyPlotter.py  ViewPyPlots.py
src/Plotters/ROOT/: CMakeLists.txt  RootPlotter.cpp
test/: 7Bedp_600keV_beam_centered_target_targetgap_BackQQQ_rndmCM_test.mask
testplots/: testplots.cpp
